cargo-features = ["edition2024"]

[package]
name = "proc"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0.65", features = ["full", "visit-mut", "proc-macro", "clone-impls", "derive", "extra-traits", "fold", "parsing", "printing", "test", "visit", "default"] }
quote = "1.0.36"
proc-macro2 = "1.0.83"

[lib]
proc-macro = true